# django-logging

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
django_app_logs/: admin.py  registry.py  signals.py  utils.py
django_logging/: admin.py  apps.py
